Update dashboard LGMAdmin, disable button once clicked

--- a/E-EstateV2/src/app/field-detail/field-detail.component.css
+++ b/E-EstateV2/src/app/field-detail/field-detail.component.css
@@ -73,3 +73,9 @@ mat-option {
     color: white;
     font-size: 11px;
 }
+
+@media only screen and (max-width: 768px) {
+  .box{
+    justify-content: unset;
+  }
+}
