--- a/E-EstateV2/src/app/generate-receipt/generate-receipt.component.html
+++ b/E-EstateV2/src/app/generate-receipt/generate-receipt.component.html
@@ -124,7 +124,7 @@
             </tr>
             <tr>
                 <td nowrap="nowrap" colspan="8" style="text-align: left;">Kebenaran bertulis ini dijana dari Sistem
-                    e-Estate pada {{dateNow | date:'dd-MM-yyyy HH:mm:ss'}}
+                    RRIMestet pada {{dateNow | date:'dd-MM-yyyy HH:mm:ss'}}
                 </td>
             </tr>
             <tr>
