--- a/E-EstateV2/src/app/add-rubber-sale/add-rubber-sale.component.html
+++ b/E-EstateV2/src/app/add-rubber-sale/add-rubber-sale.component.html
@@ -39,7 +39,7 @@
         <input type="radio" name="choice" value="yes" [(ngModel)]="deliveryAgent" > Yes
       </label>
       <label>
-        <input type="radio" name="choice" value="no" [(ngModel)]="deliveryAgent"> No
+        <input type="radio" name="choice" value="no" [(ngModel)]="deliveryAgent" (change)="deliveryRemark()"> No
       </label>
     </div>
 
