--- a/E-EstateV2/src/app/field-detail/field-detail.component.html
+++ b/E-EstateV2/src/app/field-detail/field-detail.component.html
@@ -17,6 +17,7 @@
   </h1>
   <hr />
 
+  <div style="overflow: auto; padding-bottom: 25px;">
   <div class="box">
     <div class="column">
       <div>
@@ -217,6 +218,7 @@
       </div>
 
     </div>
+  </div>
   </div>
 
   <div style="margin-top: 10px">
