--- a/E-EstateV2/src/app/polygon/polygon.component.css
+++ b/E-EstateV2/src/app/polygon/polygon.component.css
@@ -1,3 +1,35 @@
-.box-container{
+.box-container {
     min-height: 560px;
-}
+  }
+  
+  button {
+    border: none;
+    background-color: #43675f;
+    padding: 3px 9px;
+    cursor: pointer;
+    border-radius: 5px;
+    color: white;
+    margin-right: 7px;
+  }
+  
+  i {
+    font-size: 15px;
+  }
+  
+  #viewDiv {
+    position: relative;
+  }
+  
+  /* Style the button container to be on the right */
+  .button {
+    position: absolute;
+    top: 60px;
+    right: 30px;
+    z-index: 1000;
+  }
+  
+  label{
+    font-weight: bold;
+    font-size:15px !important
+  }
+  
