--- a/E-EstateV2/src/app/cost-info/direct-cost/mature-cost/mature-cost.component.html
+++ b/E-EstateV2/src/app/cost-info/direct-cost/mature-cost/mature-cost.component.html
@@ -85,8 +85,11 @@
 
           <div>
             <div *ngIf="draftFilterMatureDirectCostAmount.length != 0">
-              <button (click)="submitMatureCost()" style="float: right" class="btn-add" type="submit">
+              <button (click)="submitMatureCost()" *ngIf="position != 'MANAGER'" style="float: right" class="btn-add" type="submit">
                 Submit &nbsp; <i class="fa fa-plus"></i>
+              </button>
+              <button (click)="submitMatureCost()" *ngIf="position == 'MANAGER'" style="float: right" class="btn-add" type="submit">
+                Approved & Submit &nbsp; <i class="fa fa-plus"></i>
               </button>
             </div>
             <div *ngIf="draftFilterMatureDirectCostAmount.length != 0">
