--- a/E-EstateV2/src/app/register/register.component.html
+++ b/E-EstateV2/src/app/register/register.component.html
@@ -23,7 +23,7 @@
           <input type="email" name="email" [(ngModel)]="register.email" />
           <label>Position <span style="color: red;">*</span> :</label>
           <mat-select  placeholder="Please Choose" name="position" [(ngModel)]="register.position">
-            <mat-option value="MANAGER">MANAGER</mat-option>
+            <mat-option value="MANAGER">MANAGER ESTATE</mat-option>
             <mat-option value="ASSISTANT MANAGER">ASSISTANT MANAGER</mat-option>
             <mat-option value="SUPERVISOR">SUPERVISOR</mat-option>
             <mat-option value="CLERK">CLERK</mat-option>
