--- a/E-EstateV2/src/app/report-field-information/report-field-information.component.html
+++ b/E-EstateV2/src/app/report-field-information/report-field-information.component.html
@@ -93,7 +93,7 @@
         <tr class="list" style="cursor:default;">
           <td>{{ (pageNumber - 1) * itemsPerPageField + i + 1 }}</td>
           <td>{{field.fieldName }}</td>
-          <td>{{ field.area }}</td>
+          <td>{{ field.rubberArea }}</td>
           <td>
             {{ field.isMature == true ? "Mature" : "Immature" }}
           </td>
