--- a/E-EstateV2/src/app/report-rubber-area-by-clone/estate-by-clone/estate-by-clone.component.html
+++ b/E-EstateV2/src/app/report-rubber-area-by-clone/estate-by-clone/estate-by-clone.component.html
@@ -16,7 +16,7 @@
         </button>
       </div><br/><br/>
 
-      <span style="font-weight: bold;">Total Rubber Area (Ha) : {{totalArea}}</span>
+      <span style="font-weight: bold;">Total Rubber Area (Ha) : {{totalArea | number:'1.2-2'  }}</span>
       <div style="overflow-x: auto">
         <table style="width: 100%">
           <tr>
